<resources>
    <!-- app-->
    <string name="app_name">TicitiTacitiToe</string>
    <string name="app_logo">app_logo</string>
    <string name="app_brand_name">TicitiTacitiToe!</string>

    <!-- login-->
    <string name="email">Email</string>
    <string name="write_email">Write your email</string>
    <string name="password">Password</string>
    <string name="write_password">Write your password</string>
    <string name="login">Login</string>
    <string name="login_here">Login here</string>
    <string name="new_player">New Player</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">No account?</string>
    <string name="register_here">Register here!</string>
    <string name="try_it">Or try it out</string>
    <string name="write_username">Write a username</string>
    <string name="default_web_client_id">485621892165-7kccg236l5ic936uhqi2u90btd22eapj.apps.googleusercontent.com</string>

    <!-- main-->
    <string name="highscore">Highscore</string>
    <string name="profile">Profile</string>
    <string name="new_game">New Game</string>

    <!-- tutorial-->
    <string name="questionmark">\?</string>
    <string name="how_to_play">How to Play</string>
    <string name="tutorial_text">Tic Tac Toe is played on a 3x3 grid. Player X goes first. Players take turns placing their symbol. The first player to get three in a row wins: Horizontal, Vertical, Diagonal</string>

    <!-- game-->
    <string name="winner">Winner: %1$s</string>
    <string name="turn">%1$s</string>
    <string name="draw">Draw</string>
    <string name="play_again">Play again!</string>
    <string name="game_cell">Game cell</string>

    <string name="play_on_this_phone">Play on \nthis phone</string>
    <string name="play_a_random_dude">Play a \nrandom dude</string>
    <string name="search_player">Search player</string>
    <string name="search_by_username">Search by username</string>
    <string name="users">Users:</string>
    <string name="search">Search</string>

    <string name="invitation_text">You have been invited by: %1$d, to play a Blitz Game</string>
    <string name="pending_invite_to">Pending invite to: %1$s</string>
    <string name="has_challenged_you_in_a_blitz_game">%1$s has challenged you in a Blitz game!</string>
    <string name="waiting_for_player">Waiting for player</string>
    <string name="start_game">Start Game</string>
    <string name="decline">Decline</string>
    <string name="close">Close</string>
    <string name="chat_hint_write_a_message">Write a message</string>

    <!-- highscore-->
    <string name="friends">Friends</string>
    <string name="global">Global</string>
    <string name="friends_leaderboard">Friends Leaderboard</string>
    <string name="global_leaderboard">Global Leaderboard</string>
    <string name="_1">#1</string>
    <string name="lost_games">Lost Games:</string>
    <string name="total_games">Total Games:</string>
    <string name="won_games">Won Games:</string>
    <string name="log_out">Log Out</string>
    <string name="winrate">Avg: %1$s</string>
    <string name="moves_made">Moves: %1$s</string>

    <!-- profile / settings-->
    <string name="username_rating">Username  #%1$d</string>
    <string name="max_streak">Max streak: \n%1$d</string>
    <string name="current_streak">Current streak: \n%1$d</string>
    <string name="friends_">Friends:</string>
    <string name="play_with_a_friend">Play with a friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="play">Play</string>

    <string name="achievements_header">achievements</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="error">ERROR!</string>
    <string name="back_button">Back button</string>

</resources>