<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".game.ui.ChallengeFragment">

    <Button
        android:id="@+id/play_on_phone_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_on_this_phone"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/play_a_random_dude_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_a_random_dude"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/play_on_phone_button"/>

    <Button
        android:id="@+id/search_player_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_player"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/play_a_random_dude_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>