<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".game.MultiplayerGameInvitationFragment">


    <TextView
        android:id="@+id/invitation_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:text="@string/invitation_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_20dp"/>

    <Button
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/accept_invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        app:layout_constraintTop_toBottomOf="@id/invitation_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/decline_invite_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_marginTop="@dimen/_20dp"
        android:id="@+id/decline_invite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/invitation_text_view"
        app:layout_constraintStart_toEndOf="@id/accept_invite_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>