<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/highscore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Title"
        android:textAlignment="center"
        android:textSize="@dimen/_24sp"
        app:layout_constraintTop_toTopOf="@id/highscore_button"
        app:layout_constraintBottom_toBottomOf="@id/highscore_button"
        app:layout_constraintStart_toEndOf="@id/highscore_button"
        app:layout_constraintEnd_toStartOf="@id/profile_button"/>

    <Button
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/new_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_button"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_games_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/recent_game_list_item"
        android:layout_margin="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/new_game_button"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>