<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ui.MyProfileActivity">


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:layout_margin="@dimen/_20dp"/>

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings_icon"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        android:layout_margin="@dimen/_20dp"/>

    <TextView
        android:id="@+id/initials_text_view"
        android:layout_width="@dimen/_100dp"
        android:layout_height="@dimen/_100dp"
        android:background="@drawable/circle_image"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_100dp"
        android:text="U"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/_24sp"
        app:layout_constraintTop_toBottomOf="@id/initials_text_view"/>

    <TextView
        android:id="@+id/current_streak_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_streak"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/username_text_view"
        app:layout_constraintEnd_toStartOf="@id/initials_text_view"/>

    <TextView
        android:id="@+id/max_streak_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_streak"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/username_text_view"
        app:layout_constraintStart_toEndOf="@id/initials_text_view"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="@dimen/_40dp"
            android:id="@+id/won_games_container"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/username_text_view">

            <TextView
                android:id="@+id/won_games_text_view"
                android:padding="16dp"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/won_games"/>

            <TextView
                android:id="@+id/won_games_number_text_view"
                android:layout_width="wrap_content"
                android:textSize="@dimen/_24sp"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/lost_games_container"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/won_games_container">

        <TextView
            android:id="@+id/lost_games_text_view"
            android:padding="16dp"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/lost_games"/>

        <TextView
            android:id="@+id/lost_games_number_text_view"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_24sp"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/total_games_container"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/lost_games_container">

        <TextView
            android:id="@+id/total_games_text_view"
            android:padding="16dp"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/total_games"/>

        <TextView
            android:id="@+id/total_games_number_text_view"
            android:layout_width="wrap_content"
            android:textSize="@dimen/_24sp"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_gravity="center"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>